# nexus0.91

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_LAW.md  docker-compose.yml  launch_nexus.sh  launch_nexus_desktop.sh  pyproject.toml
.github/: pull_request_template.md
contracts/: nexus_desktop_api.openapi.yaml
desktop_shell/: package-lock.json  package.json
docs/: AUTOBUILDER_TARGET_SPEC.md  NEXUS_DEFINITION_OF_DONE.md
nexus_observability/: metrics.py  structured_logging.py
nexus_persistence/: persistence_validation.py
nexus_security/: runtime_enforcement.py
scripts/: _release_common.py  _repo_bootstrap.py  emit_bootstrap_evidence.py  generate_behavioral_gate_evidence.py  generate_release_manifest.py  generate_run_timeline.py  generate_ui_truth_evidence.py  rollback_readiness.py  run_adaptive_learning_scenarios.py  run_artifact_lineage_scenarios.py  run_behavioral_scenarios.py  run_continuity_scenarios.py  run_enterprise_gate.py  run_execution_scenarios.py  run_final_certification_scenarios.py  run_final_configuration_scenarios.py  run_fresh_bootstrap_check.py  run_full_system_wiring_scenarios.py  run_interrupt_resume_scenarios.py  run_job_persistence_scenarios.py  run_max_power_scenarios.py  run_memory_behavior_scenarios.py  run_memory_context_scenarios.py  run_memory_scenarios.py  run_memory_trace_scenarios.py  run_observability_scenarios.py  run_performance_proof.py  run_readiness_scenarios.py  run_release_hardening.py  run_release_scenarios.py  run_run_lifecycle_scenarios.py  run_security_governance_scenarios.py  run_ui_truth_scenarios.py  (+47 more)
(+222 files in other folders)
